fixed overflow

--- a/src/Components/Recruitments/Recruitments.scss
+++ b/src/Components/Recruitments/Recruitments.scss
@@ -1,5 +1,8 @@
 body {
+  max-width: 100%;
+  overflow-x: hidden;
   .recruitments {
+    
     font-family: Poppins;
     font-style: normal;
     font-weight: normal;
